--- a/list.html
+++ b/list.html
@@ -7,6 +7,13 @@
  
 <body>
 starting......
+ 
+ </br>
+ 
+
+<input type="button" name="Submit" value"返回上一页" onclick="javascript:history.back(-1);"/>
+<a href="https://cheney19.github.io/home">返回首页</a>
+ 
 </body>
  
 </html>
